[package]
name = "cardea-calculator"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/cardea-mcp/cardea-calculator"
license    = "Apache-2.0"

[dependencies]
rmcp = { version = "0.6.4", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
    "transport-sse-server",
] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
futures = { version = "0.3" }
rand = { version = "0.9" }
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-tungstenite = { version = "0.27.0" }
reqwest = { version = "0.12", default-features = false }
pin-project-lite = { version = "0.2" }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
